@@ -111,6 +111,7 @@ public class SurfJNI {
   public final static native double Cpu_getPowerPeakAt(long jarg1, Cpu jarg1_, int jarg2);
   public final static native int Cpu_getNbPstates(long jarg1, Cpu jarg1_);
   public final static native void Cpu_setPstate(long jarg1, Cpu jarg1_, int jarg2);
+  public final static native int Cpu_getPstate(long jarg1, Cpu jarg1_);
   public final static native void Cpu_setState(long jarg1, Cpu jarg1_, int jarg2);
   public final static native void Cpu_director_connect(Cpu obj, long cptr, boolean mem_own, boolean weak_global);
   public final static native void Cpu_change_ownership(Cpu obj, long cptr, boolean take_or_release);
@@ -249,6 +250,9 @@ public class SurfJNI {
   }
   public static void SwigDirector_Cpu_setPstate(Cpu self, int pstate_index) {
     self.setPstate(pstate_index);
+  }
+  public static int SwigDirector_Cpu_getPstate(Cpu self) {
+    return self.getPstate();
   }
   public static double SwigDirector_CpuAction_getRemains(CpuAction self) {
     return self.getRemains();
