@@ -620,14 +620,8 @@ XBT_PUBLIC(double) surf_workstation_get_power_peak_at(surf_resource_t host, int 
  */
 XBT_PUBLIC(int) surf_workstation_get_nb_pstates(surf_resource_t host);
 
-/**
- * @brief [brief description]
- * @details [long description]
- *
- * @param host [description]
- * @param pstate_index [description]
- */
 XBT_PUBLIC(void) surf_workstation_set_pstate(surf_resource_t host, int pstate_index);
+XBT_PUBLIC(int) surf_workstation_get_pstate(surf_resource_t host);
 
 /**
  * @brief Get the consumed energy (in joules) of a workstation
