@@ -11,6 +11,7 @@ SimGrid (3.12) NOT RELEASED; urgency=low
        get_data_size(t) -> get_bytes_amount(t)
    - Massive cleanups in the functions related to the energy
      - MSG_host_get_pstate_number() -> MSG_host_get_nb_pstates()
+   - New: MSG_host_get_pstate() 
  jMSG:
  * Interface improvement:
    - Rename Host.isAvail() to Host.isOn()
@@ -65,8 +66,9 @@ SimGrid (3.12) NOT RELEASED; urgency=low
    - [#17799] : have mpi_group_range_incl and mpi_group_range_excl better test some corner cases
    - Correctly use loopback on fat-tree clusters
    - Asynchronous small messages shouldn't trigger deadlocks anymore
- * Interface cleanup
-   - smpi_set_host_power_peak_at -> smpi_set_host_pstate
+ * Energy/DVFS cleanup and improvement
+   - smpi_set_host_power_peak_at() -> smpi_set_host_pstate()
+   - new: smpi_get_host_pstate()
  SURF
   * Bug fixes 
    - "Full" network optimization flag was broken since Surf++
